objects/APTS_Buyer_Transfer_Price_Currency__c.object
<CustomObject>
    <description>Custom object to hold data for the Transfer Price Currency based on the factory and the buyer</description>
    <fields>
        <fullName>APTS_Buyer_Code__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique identifier for the buyer</description>
        <inlineHelpText>Unique identifier for the buyer</inlineHelpText>
        <label>Buyer Code</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Org_Unit_ID__c</fullName>
        <description>Identifier for the organization unit, e.g. a BALID</description>
        <inlineHelpText>Identifier for the organization unit, e.g. a BALID</inlineHelpText>
        <label>Org Unit ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Transfer_Price_Currency_Code__c</fullName>
        <description>Currency code for the Transfer Price</description>
        <inlineHelpText>Currency code for the Transfer Price</inlineHelpText>
        <label>Transfer Price Currency Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Buyer Transfer Price Currency</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BTP-{00000000}</displayFormat>
        <label>Buyer Transfer Price Currency ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Transfer Price Currencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>